[package]
name = "fuzz-introspector-client"
version = "0.0.2"
edition = "2021"
authors = ["Nathaniel Brough <nathaniel.brough@gmail.com>"]
description = "An unofficial client library for the fuzz introspector API."
documentation = "https://docs.rs/fuzz-introspector-client"
repository = "https://github.com/silvergasp/fuzz-introspector-client"
license = "MIT"
license-file = "LICENSE"
keywords = ["oss-fuzz", "fuzz", "api", "introspector"]

[dependencies]
anyhow = "1.0.78"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.53"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.12", features = ["derive"] }
tokio-test = "0.4.3"

[[example]]
name = "introspector_query"
